--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atchafalaya/deployment-lab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/atchafalaya/deployment-lab/issues"
+  },
+  "homepage": "https://github.com/atchafalaya/deployment-lab#readme"
 }
